fix overflow roomname

--- a/src/app/rooms/room-list/room-list.component.scss
+++ b/src/app/rooms/room-list/room-list.component.scss
@@ -11,9 +11,15 @@
     width: 21%;
     margin: 1%;
     padding: 1%;
+    
     .mat-card-image{
         width: calc(100% - .5rem);
     }
+    .mat-card-header{
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+    
     .mat-card-content{
         span{
             display: flex;
